modules/data/hml/src/HmlParser.cpp

// Generated from Hml.g4 by ANTLR 4.13.2


#include "HmlListener.h"
#include "HmlVisitor.h"

#include "HmlParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct HmlParserStaticData final {
  HmlParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  HmlParserStaticData(const HmlParserStaticData&) = delete;
  HmlParserStaticData(HmlParserStaticData&&) = delete;
  HmlParserStaticData& operator=(const HmlParserStaticData&) = delete;
  HmlParserStaticData& operator=(HmlParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag hmlParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<HmlParserStaticData> hmlParserStaticData = nullptr;

void hmlParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (hmlParserStaticData != nullptr) {
    return;
  }
#else
  assert(hmlParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<HmlParserStaticData>(
    std::vector<std::string>{
      "hml", "element", "elementBody", "includeStatement", "importStatement", 
      "variableDeclaration", "signalDeclaration", "typeAnnotation", "parameterList", 
      "parameter", "conditionalStatement", "conditionalExpression", "property", 
      "propertyName", "eventHandler", "propertyValue", "complexExpression", 
      "scriptStatement", "functionCall", "argumentList", "elementType"
    },
    std::vector<std::string>{
      "", "'='", "'int'", "'string'", "'bool'", "'any'", "'on'", "'+'", 
      "'-'", "'*'", "'/'", "'include'", "'import'", "'script'", "'defer'", 
      "'async'", "'var'", "'signal'", "'if'", "'else'", "'=='", "'!='", 
      "'>'", "'<'", "'>='", "'<='", "'&&'", "'||'", "'!'", "", "", "", "", 
      "", "", "", "", "", "", "'{'", "'}'", "'('", "')'", "':'", "','", 
      "';'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "INCLUDE", "IMPORT", "SCRIPT", 
      "DEFER", "ASYNC", "VAR", "SIGNAL", "IF", "ELSE", "EQ", "NE", "GT", 
      "LT", "GE", "LE", "AND", "OR", "NOT", "ID", "STRING", "SCRIPT_CONTENT", 
      "EXPRESSION", "NUMBER", "COLOR", "BOOLEAN", "WS", "LINE_COMMENT", 
      "BLOCK_COMMENT", "LBRACE", "RBRACE", "LPAREN", "RPAREN", "COLON", 
      "COMMA", "SEMICOLON"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  hmlParserStaticData = std::move(staticData);
}

}

HmlParser::HmlParser(TokenStream *input) : HmlParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

HmlParser::HmlParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  HmlParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *hmlParserStaticData->atn, hmlParserStaticData->decisionToDFA, hmlParserStaticData->sharedContextCache, options);
}

HmlParser::~HmlParser() {
  delete _interpreter;
}

const atn::ATN& HmlParser::getATN() const {
  return *hmlParserStaticData->atn;
}

std::string HmlParser::getGrammarFileName() const {
  return "Hml.g4";
}

const std::vector<std::string>& HmlParser::getRuleNames() const {
  return hmlParserStaticData->ruleNames;
}

const dfa::Vocabulary& HmlParser::getVocabulary() const {
  return hmlParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView HmlParser::getSerializedATN() const {
  return hmlParserStaticData->serializedATN;
}


//----------------- HmlContext ------------------------------------------------------------------

HmlParser::HmlContext::HmlContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* HmlParser::HmlContext::EOF() {
  return getToken(HmlParser::EOF, 0);
}

std::vector<HmlParser::ImportStatementContext *> HmlParser::HmlContext::importStatement() {
  return getRuleContexts<HmlParser::ImportStatementContext>();
}

HmlParser::ImportStatementContext* HmlParser::HmlContext::importStatement(size_t i) {
  return getRuleContext<HmlParser::ImportStatementContext>(i);
}

std::vector<HmlParser::VariableDeclarationContext *> HmlParser::HmlContext::variableDeclaration() {
  return getRuleContexts<HmlParser::VariableDeclarationContext>();
}

HmlParser::VariableDeclarationContext* HmlParser::HmlContext::variableDeclaration(size_t i) {
  return getRuleContext<HmlParser::VariableDeclarationContext>(i);
}

std::vector<HmlParser::IncludeStatementContext *> HmlParser::HmlContext::includeStatement() {
  return getRuleContexts<HmlParser::IncludeStatementContext>();
}

HmlParser::IncludeStatementContext* HmlParser::HmlContext::includeStatement(size_t i) {
  return getRuleContext<HmlParser::IncludeStatementContext>(i);
}

std::vector<HmlParser::ElementContext *> HmlParser::HmlContext::element() {
  return getRuleContexts<HmlParser::ElementContext>();
}

HmlParser::ElementContext* HmlParser::HmlContext::element(size_t i) {
  return getRuleContext<HmlParser::ElementContext>(i);
}


size_t HmlParser::HmlContext::getRuleIndex() const {
  return HmlParser::RuleHml;
}

void HmlParser::HmlContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HmlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterHml(this);
}

void HmlParser::HmlContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HmlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitHml(this);
}


std::any HmlParser::HmlContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HmlVisitor*>(visitor))
    return parserVisitor->visitHml(this);
  else
    return visitor->visitChildren(this);
}

HmlParser::HmlContext* HmlParser::hml() {
  HmlContext *_localctx = _tracker.createInstance<HmlContext>(_ctx, getState());
  enterRule(_localctx, 0, HmlParser::RuleHml);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(45);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == HmlParser::IMPORT) {
      setState(42);
      importStatement();
      setState(47);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(51);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == HmlParser::VAR) {
      setState(48);
      variableDeclaration();
      setState(53);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(56); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(56);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case HmlParser::INCLUDE: {
          setState(54);
          includeStatement();
          break;
        }

        case HmlParser::ID: {
          setState(55);
          element();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(58); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == HmlParser::INCLUDE

    || _la == HmlParser::ID);
    setState(60);
    match(HmlParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ElementContext ------------------------------------------------------------------

HmlParser::ElementContext::ElementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

HmlParser::ElementTypeContext* HmlParser::ElementContext::elementType() {
  return getRuleContext<HmlParser::ElementTypeContext>(0);
}

tree::TerminalNode* HmlParser::ElementContext::LBRACE() {
  return getToken(HmlParser::LBRACE, 0);
}

HmlParser::ElementBodyContext* HmlParser::ElementContext::elementBody() {
  return getRuleContext<HmlParser::ElementBodyContext>(0);
}

tree::TerminalNode* HmlParser::ElementContext::RBRACE() {
  return getToken(HmlParser::RBRACE, 0);
}


size_t HmlParser::ElementContext::getRuleIndex() const {
  return HmlParser::RuleElement;
}

void HmlParser::ElementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HmlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterElement(this);
}

void HmlParser::ElementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HmlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitElement(this);
}


std::any HmlParser::ElementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HmlVisitor*>(visitor))
    return parserVisitor->visitElement(this);
  else
    return visitor->visitChildren(this);
}

HmlParser::ElementContext* HmlParser::element() {
  ElementContext *_localctx = _tracker.createInstance<ElementContext>(_ctx, getState());
  enterRule(_localctx, 2, HmlParser::RuleElement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(71);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(62);
      elementType();
      setState(63);
      match(HmlParser::LBRACE);
      setState(64);
      elementBody();
      setState(65);
      match(HmlParser::RBRACE);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(67);
      elementType();
      setState(68);
      match(HmlParser::LBRACE);
      setState(69);
      match(HmlParser::RBRACE);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ElementBodyContext ------------------------------------------------------------------

HmlParser::ElementBodyContext::ElementBodyContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<HmlParser::PropertyContext *> HmlParser::ElementBodyContext::property() {
  return getRuleContexts<HmlParser::PropertyContext>();
}

HmlParser::PropertyContext* HmlParser::ElementBodyContext::property(size_t i) {
  return getRuleContext<HmlParser::PropertyContext>(i);
}

std::vector<HmlParser::ElementContext *> HmlParser::ElementBodyContext::element() {
  return getRuleContexts<HmlParser::ElementContext>();
}

HmlParser::ElementContext* HmlParser::ElementBodyContext::element(size_t i) {
  return getRuleContext<HmlParser::ElementContext>(i);
}

std::vector<HmlParser::IncludeStatementContext *> HmlParser::ElementBodyContext::includeStatement() {
  return getRuleContexts<HmlParser::IncludeStatementContext>();
}

HmlParser::IncludeStatementContext* HmlParser::ElementBodyContext::includeStatement(size_t i) {
  return getRuleContext<HmlParser::IncludeStatementContext>(i);
}

std::vector<HmlParser::ScriptStatementContext *> HmlParser::ElementBodyContext::scriptStatement() {
  return getRuleContexts<HmlParser::ScriptStatementContext>();
}

HmlParser::ScriptStatementContext* HmlParser::ElementBodyContext::scriptStatement(size_t i) {
  return getRuleContext<HmlParser::ScriptStatementContext>(i);
}

std::vector<HmlParser::VariableDeclarationContext *> HmlParser::ElementBodyContext::variableDeclaration() {
  return getRuleContexts<HmlParser::VariableDeclarationContext>();
}

HmlParser::VariableDeclarationContext* HmlParser::ElementBodyContext::variableDeclaration(size_t i) {
  return getRuleContext<HmlParser::VariableDeclarationContext>(i);
}

std::vector<HmlParser::ConditionalStatementContext *> HmlParser::ElementBodyContext::conditionalStatement() {
  return getRuleContexts<HmlParser::ConditionalStatementContext>();
}

HmlParser::ConditionalStatementContext* HmlParser::ElementBodyContext::conditionalStatement(size_t i) {
  return getRuleContext<HmlParser::ConditionalStatementContext>(i);
}

std::vector<HmlParser::SignalDeclarationContext *> HmlParser::ElementBodyContext::signalDeclaration() {
  return getRuleContexts<HmlParser::SignalDeclarationContext>();
}

HmlParser::SignalDeclarationContext* HmlParser::ElementBodyContext::signalDeclaration(size_t i) {
  return getRuleContext<HmlParser::SignalDeclarationContext>(i);
}


size_t HmlParser::ElementBodyContext::getRuleIndex() const {
  return HmlParser::RuleElementBody;
}

void HmlParser::ElementBodyContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HmlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterElementBody(this);
}

void HmlParser::ElementBodyContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HmlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitElementBody(this);
}


std::any HmlParser::ElementBodyContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HmlVisitor*>(visitor))
    return parserVisitor->visitElementBody(this);
  else
    return visitor->visitChildren(this);
}

HmlParser::ElementBodyContext* HmlParser::elementBody() {
  ElementBodyContext *_localctx = _tracker.createInstance<ElementBodyContext>(_ctx, getState());
  enterRule(_localctx, 4, HmlParser::RuleElementBody);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(80); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(80);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
      case 1: {
        setState(73);
        property();
        break;
      }

      case 2: {
        setState(74);
        element();
        break;
      }

      case 3: {
        setState(75);
        includeStatement();
        break;
      }

      case 4: {
        setState(76);
        scriptStatement();
        break;
      }

      case 5: {
        setState(77);
        variableDeclaration();
        break;
      }

      case 6: {
        setState(78);
        conditionalStatement();
        break;
      }

      case 7: {
        setState(79);
        signalDeclaration();
        break;
      }

      default:
        break;
      }
      setState(82); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 537339968) != 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IncludeStatementContext ------------------------------------------------------------------

HmlParser::IncludeStatementContext::IncludeStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* HmlParser::IncludeStatementContext::INCLUDE() {
  return getToken(HmlParser::INCLUDE, 0);
}

tree::TerminalNode* HmlParser::IncludeStatementContext::STRING() {
  return getToken(HmlParser::STRING, 0);
}


size_t HmlParser::IncludeStatementContext::getRuleIndex() const {
  return HmlParser::RuleIncludeStatement;
}

void HmlParser::IncludeStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HmlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIncludeStatement(this);
}

void HmlParser::IncludeStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HmlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIncludeStatement(this);
}


std::any HmlParser::IncludeStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HmlVisitor*>(visitor))
    return parserVisitor->visitIncludeStatement(this);
  else
    return visitor->visitChildren(this);
}

HmlParser::IncludeStatementContext* HmlParser::includeStatement() {
  IncludeStatementContext *_localctx = _tracker.createInstance<IncludeStatementContext>(_ctx, getState());
  enterRule(_localctx, 6, HmlParser::RuleIncludeStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(84);
    match(HmlParser::INCLUDE);
    setState(85);
    match(HmlParser::STRING);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ImportStatementContext ------------------------------------------------------------------

HmlParser::ImportStatementContext::ImportStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* HmlParser::ImportStatementContext::IMPORT() {
  return getToken(HmlParser::IMPORT, 0);
}

tree::TerminalNode* HmlParser::ImportStatementContext::STRING() {
  return getToken(HmlParser::STRING, 0);
}


size_t HmlParser::ImportStatementContext::getRuleIndex() const {
  return HmlParser::RuleImportStatement;
}

void HmlParser::ImportStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HmlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterImportStatement(this);
}

void HmlParser::ImportStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HmlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitImportStatement(this);
}


std::any HmlParser::ImportStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HmlVisitor*>(visitor))
    return parserVisitor->visitImportStatement(this);
  else
    return visitor->visitChildren(this);
}

HmlParser::ImportStatementContext* HmlParser::importStatement() {
  ImportStatementContext *_localctx = _tracker.createInstance<ImportStatementContext>(_ctx, getState());
  enterRule(_localctx, 8, HmlParser::RuleImportStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(87);
    match(HmlParser::IMPORT);
    setState(88);
    match(HmlParser::STRING);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VariableDeclarationContext ------------------------------------------------------------------

HmlParser::VariableDeclarationContext::VariableDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* HmlParser::VariableDeclarationContext::VAR() {
  return getToken(HmlParser::VAR, 0);
}

tree::TerminalNode* HmlParser::VariableDeclarationContext::ID() {
  return getToken(HmlParser::ID, 0);
}

tree::TerminalNode* HmlParser::VariableDeclarationContext::COLON() {
  return getToken(HmlParser::COLON, 0);
}

HmlParser::TypeAnnotationContext* HmlParser::VariableDeclarationContext::typeAnnotation() {
  return getRuleContext<HmlParser::TypeAnnotationContext>(0);
}

HmlParser::PropertyValueContext* HmlParser::VariableDeclarationContext::propertyValue() {
  return getRuleContext<HmlParser::PropertyValueContext>(0);
}


size_t HmlParser::VariableDeclarationContext::getRuleIndex() const {
  return HmlParser::RuleVariableDeclaration;
}

void HmlParser::VariableDeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HmlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVariableDeclaration(this);
}

void HmlParser::VariableDeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HmlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVariableDeclaration(this);
}


std::any HmlParser::VariableDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HmlVisitor*>(visitor))
    return parserVisitor->visitVariableDeclaration(this);
  else
    return visitor->visitChildren(this);
}

HmlParser::VariableDeclarationContext* HmlParser::variableDeclaration() {
  VariableDeclarationContext *_localctx = _tracker.createInstance<VariableDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 10, HmlParser::RuleVariableDeclaration);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(101);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(90);
      match(HmlParser::VAR);
      setState(91);
      match(HmlParser::ID);
      setState(92);
      match(HmlParser::COLON);
      setState(93);
      typeAnnotation();
      setState(94);
      match(HmlParser::T__0);
      setState(95);
      propertyValue();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(97);
      match(HmlParser::VAR);
      setState(98);
      match(HmlParser::ID);
      setState(99);
      match(HmlParser::COLON);
      setState(100);
      propertyValue();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SignalDeclarationContext ------------------------------------------------------------------

HmlParser::SignalDeclarationContext::SignalDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* HmlParser::SignalDeclarationContext::SIGNAL() {
  return getToken(HmlParser::SIGNAL, 0);
}

tree::TerminalNode* HmlParser::SignalDeclarationContext::ID() {
  return getToken(HmlParser::ID, 0);
}

tree::TerminalNode* HmlParser::SignalDeclarationContext::LPAREN() {
  return getToken(HmlParser::LPAREN, 0);
}

tree::TerminalNode* HmlParser::SignalDeclarationContext::RPAREN() {
  return getToken(HmlParser::RPAREN, 0);
}

HmlParser::ParameterListContext* HmlParser::SignalDeclarationContext::parameterList() {
  return getRuleContext<HmlParser::ParameterListContext>(0);
}


size_t HmlParser::SignalDeclarationContext::getRuleIndex() const {
  return HmlParser::RuleSignalDeclaration;
}

void HmlParser::SignalDeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HmlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSignalDeclaration(this);
}

void HmlParser::SignalDeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HmlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSignalDeclaration(this);
}


std::any HmlParser::SignalDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HmlVisitor*>(visitor))
    return parserVisitor->visitSignalDeclaration(this);
  else
    return visitor->visitChildren(this);
}

HmlParser::SignalDeclarationContext* HmlParser::signalDeclaration() {
  SignalDeclarationContext *_localctx = _tracker.createInstance<SignalDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 12, HmlParser::RuleSignalDeclaration);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(103);
    match(HmlParser::SIGNAL);
    setState(104);
    match(HmlParser::ID);
    setState(105);
    match(HmlParser::LPAREN);
    setState(107);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == HmlParser::ID) {
      setState(106);
      parameterList();
    }
    setState(109);
    match(HmlParser::RPAREN);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeAnnotationContext ------------------------------------------------------------------

HmlParser::TypeAnnotationContext::TypeAnnotationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t HmlParser::TypeAnnotationContext::getRuleIndex() const {
  return HmlParser::RuleTypeAnnotation;
}
